@@ -104,7 +104,9 @@ clicked on menu item.
 * Fixed bug with working links in path panel and
 with clicks on files.
 
-* Changed icons font from octicons to foundicons'
+* Changed icons font from octicons to foundicons
+
+* Changed icons font from foundicons to fonteollo
 
 
 2012.12.12, Version 0.1.8
